[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = "1"
base64                = "0"
deadpool-postgres     = "0"
deadpool-redis        = "0"
glob                  = "0"
google-secretmanager1 = "*"
openssl               = "0"
passwords             = "3"
postgres-openssl      = "0"
redis                 = { version = "0", default-features = false, features = ["tokio-native-tls-comp","tokio-rustls"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
tokio                 = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tokio-postgres        = { version = "0", features = ["with-chrono-0_4","with-serde_json-1"] }
tokio-rustls          = { version = "0" }
