[package]
name = "db"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = "1"
deadpool-postgres     = "0"
deadpool-redis        = { version = "0.14" }
glob                  = "0"
google-auth-helper    = { git = "https://github.com/xAmbit-ai/google-auth-helper.git", branch = "main" }
log                   = "0"
nimbus                = { git = "https://github.com/xAmbit-ai/nimbus.git", branch = "main" }
openssl               = "0"
passwords             = "3"
postgres-openssl      = "0"
redis                 = { version = "0.24", default-features = false, features = ["tokio-native-tls-comp"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
tempdir               = "0"
tokio                 = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tokio-postgres        = { version = "0", features = ["with-chrono-0_4","with-serde_json-1"] }