[package]
name = "db"
version = "0.16.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                 = "1"
aws-config             = "1"
aws-sdk-secretsmanager = "1"
deadpool-postgres      = "0"
deadpool-redis         = { version = "0.15" }
glob                   = "0"
hyper-rustls           = "0"
log                    = "0"
openssl                = "0"
passwords              = "3"
postgres-openssl       = "0"
redis                  = { version = "0.25", default-features = false, features = ["tokio-native-tls-comp"] }
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
tempdir                = "0"
tokio                  = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-postgres         = { version = "0", features = ["with-chrono-0_4","with-serde_json-1"] }

[dev-dependencies]
pretty_env_logger = "0"